Try to proxy plausible

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ import Main from '../components/Main.astro';
 	</script>
 
 	<script defer src="/js/lite-yt-embed.js"></script>
-	<script defer data-domain="amelitegame.com" src="https://plausible.io/js/plausible.outbound-links.js"></script>
+	<script defer data-domain="amelitegame.com" src="/js/script.js"></script>
 </head>
 <body>
 	<ParallaxHeader />
