Add links except for contact and discord

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -26,8 +26,8 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		</p>
 		<ul class="socials">
 			<SocialMediaButton text="Discord" linkUrl="#" iconUrl="/assets/img/discord-logo.svg" />
-			<SocialMediaButton text="Instagram" linkUrl="#" iconUrl="/assets/img/instagram-logo.png" />
-			<SocialMediaButton text="Facebook" linkUrl="#" iconUrl="/assets/img/facebook-logo.png" />
+			<SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/amelite.sealhorsestudios/" iconUrl="/assets/img/instagram-logo.png" />
+			<SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/amelite.sealhorsestudios/" iconUrl="/assets/img/facebook-logo.png" />
 		</ul>
 		<h2>Screenshots</h2>
 		<div class="screenshots">
