--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,14 +5,13 @@
 		</small>
 		<nav>
 			<ul>
-				<li><a href="#">Steam</a></li>
-				<li><a href="#">Discord</a></li>
-				<li><a href="#">Facebook</a></li>
-				<li><a href="#">Instagram</a></li>
+				<li><a href="https://store.steampowered.com/app/1848220/Amelite/">Steam</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 			<ul>
-				<li><a href="#">Press kit</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="#">Discord</a></li>
+				<li><a href="https://www.facebook.com/amelite.sealhorsestudios/">Facebook</a></li>
+				<li><a href="https://www.instagram.com/amelite.sealhorsestudios/">Instagram</a></li>
 			</ul>
 		</nav>
 	</div>
