--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@
 		max-width: 80ch;
 		margin: auto;
 		padding: 2ch;
-		background-image: url("/assets/img/sealhorse-studios.png");
+		background-image: url("/img/sealhorse-studios.png");
 		background-repeat: no-repeat;
 		background-position-x: 95%;
 		background-position-y: 30%;
