--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -7,7 +7,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 
 ---
 <main>
-	<img class="background0" src="/assets/img/parallax/bg0.webp" alt="" role="presentation" draggable="false"/>
+	<img class="background0" src="/img/parallax/bg0.webp" alt="" role="presentation" draggable="false"/>
 	<div id="content">
 		<p class="hero">
 			<strong>Amelite</strong> is a 2D platformer that will challenge your creativity in this new take on a classic genre. Create your own path as the power of drawing platforms is in <em>your</em> hands!
@@ -25,9 +25,9 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem excepturi in reprehenderit quo nemo aspernatur dicta, accusantium quibusdam ad, culpa eius illo similique ipsa cumque?
 		</p>
 		<ul class="socials">
-			<SocialMediaButton text="Discord" linkUrl="#" iconUrl="/assets/img/discord-logo.svg" />
-			<SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/amelite.sealhorsestudios/" iconUrl="/assets/img/instagram-logo.png" />
-			<SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/amelite.sealhorsestudios/" iconUrl="/assets/img/facebook-logo.png" />
+			<SocialMediaButton text="Discord" linkUrl="#" iconUrl="/img/discord-logo.svg" />
+			<SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/amelite.sealhorsestudios/" iconUrl="/img/instagram-logo.png" />
+			<SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/amelite.sealhorsestudios/" iconUrl="/img/facebook-logo.png" />
 		</ul>
 		<h2>Screenshots</h2>
 		<div class="screenshots">
