--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -1,6 +1,6 @@
 <a href="https://store.steampowered.com/app/1848220/Amelite/">
 	<span>Wishlist on Steam</span>
-	<img src="/assets/img/steam-logo.png" alt="" role="presentation"/>
+	<img src="/img/steam-logo.png" alt="" role="presentation"/>
 </a>
 
 <style>
