--- a/src/components/WallSlide.astro
+++ b/src/components/WallSlide.astro
@@ -1,4 +1,4 @@
-<img src="/assets/img/wallslide.png" class="scroll" data-speed="4.75" alt="" role="presentation"/>
+<img src="/img/wallslide.png" class="scroll" data-speed="4.75" alt="" role="presentation"/>
 
 <style>
 	img {
