--- a/src/components/YouTube.astro
+++ b/src/components/YouTube.astro
@@ -7,7 +7,7 @@ export interface Props {
 const { id, alt } = Astro.props;
 
 ---
-<lite-youtube videoid={id} playlabel={alt} style="background-image: url('/assets/img/trailer-img.png');" params="modestbranding=1&rel=0">
+<lite-youtube videoid={id} playlabel={alt} style="background-image: url('/img/trailer-img.png');" params="modestbranding=1&rel=0">
 <!-- do not remove this comment -->
 </lite-youtube>
 
