--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -20,7 +20,7 @@
 <body>
 	<div class="container">
 		<header>
-			<img src="/assets/img/404.png" alt="" role="presentation" />
+			<img src="/img/404.png" alt="" role="presentation" />
 			<h1>Page not found</h1>
 		</header>
 		
