--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -27,7 +27,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		</ul>
 		<h2>The team</h2>
 		<p>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem excepturi in reprehenderit quo nemo aspernatur dicta, accusantium quibusdam ad, culpa eius illo similique ipsa cumque?
+			Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur accusantium atque nesciunt beatae eos quidem sed ex reiciendis, tempore rerum sequi mollitia itaque assumenda ducimus, ad corrupti obcaecati laudantium quibusdam tenetur voluptatibus quisquam ullam nam? Laborum corporis est dolor a eos ut esse hic accusantium fuga explicabo, vitae, nesciunt ullam!
 		</p>
 		<h2>Screenshots</h2>
 		<div class="screenshots">
