--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,32 @@ import ParallaxHeader from '../components/ParallaxHeader.astro';
 import WallSlide from '../components/WallSlide.astro';
 import Footer from '../components/Footer.astro';
 import Main from '../components/Main.astro';
+import { SEO } from 'astro-seo';
 ---
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Amelite - Out soon on Steam!</title>
+
+	<SEO 
+		title="Amelite"
+		description="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Make your way through dangerous levels as you climb your way to the top of an abandoned, mystical tower and find your way back home."
+		openGraph={{
+			basic: {
+				title: "Amelite - Out soon on Steam!",
+				type: "website",
+				image: "/img/trailer-img.png"
+			},
+			optional: {
+				siteName: "Amelite",
+				video: "https://www.youtube.com/v/EKcnp1fLmyM",
+			},
+			image: {
+				type: "image/png",
+				alt: "The main character of the game Amelite, standing on a cliffside looking intently at the logotype of the game."
+			}
+		}}
+	/>
 
 	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 	<link rel="icon" type="image/png" href="/favicon-40x40.png" />
