--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,9 @@ import { SEO } from 'astro-seo';
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<meta name="author" content="Marcus Otterström"/>
+	<meta name="keywords" content="Amelite,Game,2D,Platformer,Draw,Platform,Steam,Indie"/>
+
 	<SEO 
 		title="Amelite"
 		description="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Make your way through dangerous levels as you climb your way to the top of an abandoned, mystical tower and find your way back home."
@@ -28,10 +31,12 @@ import { SEO } from 'astro-seo';
 				alt: "The main character of the game Amelite, standing on a cliffside looking intently at the logotype of the game."
 			}
 		}}
+		twitter={{
+			card: "summary_large_image"
+		}}
 	/>
 
-	<link rel="icon" type="image/x-icon" href="/favicon.ico" />
-	<link rel="icon" type="image/png" href="/favicon-40x40.png" />
+	<link rel="icon" type="image/png" sizes="40x40" href="/favicon-40x40.png" />
 
 	<style global>
 		@import "../styles/base.css";
