Add missing meta description for twitter

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,8 @@ import { SEO } from 'astro-seo';
 		}}
 	/>
 
+	<meta property="twitter:description" content="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Make your way through dangerous levels as you climb your way to the top of an abandoned, mystical tower and find your way back home.">
+
 	<link rel="icon" type="image/png" sizes="40x40" href="/favicon-40x40.png" />
 
 	<style global>
