--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import { SEO } from 'astro-seo';
 
 	<SEO 
 		title="Amelite"
-		description="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Make your way through dangerous levels as you climb your way to the top of an abandoned, mystical tower and find your way back home."
+		description="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home."
 		canonical="https://amelitegame.com"
 		openGraph={{
 			basic: {
@@ -27,7 +27,7 @@ import { SEO } from 'astro-seo';
 			optional: {
 				siteName: "Amelite",
 				video: "https://www.youtube.com/v/EKcnp1fLmyM",
-				description: "Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Make your way through dangerous levels as you climb your way to the top of an abandoned, mystical tower and find your way back home."
+				description: "Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home."
 			},
 			image: {
 				type: "image/png",
@@ -39,8 +39,8 @@ import { SEO } from 'astro-seo';
 		}}
 	/>
 
-	<meta property="twitter:description" content="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Make your way through dangerous levels as you climb your way to the top of an abandoned, mystical tower and find your way back home.">
-	<meta itemprop="description" content="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Make your way through dangerous levels as you climb your way to the top of an abandoned, mystical tower and find your way back home.">
+	<meta property="twitter:description" content="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home.">
+	<meta itemprop="description" content="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home.">
 
 	<link rel="icon" type="image/png" sizes="40x40" href="/favicon-40x40.png" />
 
