OG tags fiddling again

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { SEO } from 'astro-seo';
 	<meta name="keywords" content="Amelite,Game,2D,Platformer,Draw,Platform,Steam,Indie"/>
 
 	<SEO 
-		title="Amelite"
+		title="Amelite - Out soon on Steam!"
 		description="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home."
 		canonical="https://amelitegame.com"
 		openGraph={{
@@ -25,7 +25,6 @@ import { SEO } from 'astro-seo';
 				url: "https://amelitegame.com"
 			},
 			optional: {
-				siteName: "Amelite",
 				video: "https://www.youtube.com/v/EKcnp1fLmyM",
 				description: "Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home."
 			},
