--- a/src/components/Screenshot.astro
+++ b/src/components/Screenshot.astro
@@ -8,7 +8,7 @@
 	const thumbUrl = `/img/screenshots/screenshot${id}-thumb.png`;
 ---
 
-<a href={linkUrl} target="_blank"><img src={thumbUrl} alt="" title="Click to see full image" role="presentation" /></a>
+<a href={linkUrl} target="_blank"><img src={thumbUrl} alt="Click to see full image" title="Click to see full image" width="360" height="210" /></a>
 
 <style>
 	img {
