--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -1,6 +1,6 @@
 <a href="https://store.steampowered.com/app/1848220/Amelite/">
 	<span>Wishlist on Steam</span>
-	<img src="/img/steam-logo.png" alt="" role="presentation"/>
+	<img src="/img/steam-logo.png" alt="" role="presentation" width="34" height="34" />
 </a>
 
 <style>
@@ -28,6 +28,7 @@
 	img {
 		height: 1.5em;
 		margin-left: 0.75em;
+		width: auto;
 	}
 
 	@media screen and (max-width: 500px) {
