--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -7,7 +7,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 
 ---
 <main>
-	<img class="background0" src="/img/parallax/bg0.webp" alt="" role="presentation" draggable="false"/>
+	<img class="background0" src="/img/parallax/bg0.webp" alt="" role="presentation" draggable="false" width="1920" height="1080" />
 	<div id="content">
 		<p class="hero">
 			<strong>Amelite</strong> is a 2D platformer that will challenge your creativity in this new take on a classic genre. Create your own path as the power of drawing platforms is in <em>your</em> hands!
@@ -21,9 +21,9 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 			Find yourself at the bottom of an abandoned and mystical tower, overgrown by dangerous crystals. With the help of a peculiar creature, climb your way to the top through an ever challenging environment, and find your way home. Leap over gaping holes, block incoming projectiles, or wall-jump in tandem with your own walls. Amelite is a game packed with creative challenges, and every player is free to make their own solutions!
 		</p>
 		<ul class="socials">
-			<SocialMediaButton text="Discord" linkUrl="#" iconUrl="/img/discord-logo.svg" />
-			<SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/amelite.sealhorsestudios/" iconUrl="/img/instagram-logo.png" />
-			<SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/amelite.sealhorsestudios/" iconUrl="/img/facebook-logo.png" />
+			<li><SocialMediaButton text="Discord" linkUrl="#" iconUrl="/img/discord-logo.svg" /></li>
+			<li><SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/amelite.sealhorsestudios/" iconUrl="/img/instagram-logo.png" /></li>
+			<li><SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/amelite.sealhorsestudios/" iconUrl="/img/facebook-logo.png" /></li>
 		</ul>
 		<h2>The team</h2>
 		<p>
@@ -71,6 +71,8 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		padding-bottom: calc(2ch - 4px);
 		user-select: none;
 		pointer-events: none;
+		height: auto;
+		aspect-ratio: 16 / 9;
 	}
 
 	.hero {
@@ -97,6 +99,12 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		justify-content: center;
 		gap: 1em;
 		flex-wrap: wrap;
+	}
+
+	@media screen and (max-width: 500px) {
+		.socials li {
+			width: 100%;
+		}
 	}
 
 	.screenshots {
