--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -11,7 +11,7 @@ const { text, iconUrl, linkUrl } = Astro.props;
 
 <a href={linkUrl}>
 	<span>{text}</span>
-	<img src={iconUrl} alt="" role="presentation">
+	<img src={iconUrl} alt="" role="presentation" />
 </a>
 <style>
 	a {
@@ -34,6 +34,7 @@ const { text, iconUrl, linkUrl } = Astro.props;
 	img {
 		height: 1.15em;
 		margin-left: 0.75em;
+		width: auto;
 	}
 
 	@media screen and (max-width: 500px) {
