More lighthouse fixes

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -71,8 +71,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		padding-bottom: calc(2ch - 4px);
 		user-select: none;
 		pointer-events: none;
-		height: auto;
-		aspect-ratio: 16 / 9;
+		height: 100%;
 	}
 
 	.hero {
