--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -11,7 +11,7 @@ const { text, iconUrl, linkUrl } = Astro.props;
 
 <a href={linkUrl}>
 	<span>{text}</span>
-	<img src={iconUrl} alt="" role="presentation" />
+	<img src={iconUrl} alt="" role="presentation" width="24" height="24" />
 </a>
 <style>
 	a {
