Replace webp with png

--- a/src/components/Awards.astro
+++ b/src/components/Awards.astro
@@ -1,9 +1,9 @@
 <div class="awards">
 	<div>
-		<img src="/img/awards/best-in-show.webp" alt="Gotland Game Conference Award: Best in show" width="173" height="146" /><img src="/img/awards/best-game-feel.webp" alt="Gotland Game Conference Award: Best game feel" width="173" height="146" />
+		<img src="/img/awards/best-in-show.png" alt="Gotland Game Conference Award: Best in show" width="173" height="146" /><img src="/img/awards/best-game-feel.png" alt="Gotland Game Conference Award: Best game feel" width="173" height="146" />
 	</div>
 	<div>
-		<img src="/img/awards/best-level-design.webp" alt="Gotland Game Conference Award: Best level design" width="173" height="146" /><img src="/img/awards/best-presentation.webp" alt="Gotland Game Conference Award: Best presentation" width="173" height="146" />
+		<img src="/img/awards/best-level-design.png" alt="Gotland Game Conference Award: Best level design" width="173" height="146" /><img src="/img/awards/best-presentation.png" alt="Gotland Game Conference Award: Best presentation" width="173" height="146" />
 	</div>
 </div>
 
