--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -7,7 +7,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 
 ---
 <main>
-	<img class="background0" src="/img/parallax/bg0.webp" alt="" role="presentation" draggable="false" width="1920" height="1080" />
+	<img class="background0" src="/img/parallax/bg0.png" alt="" role="presentation" draggable="false" width="1920" height="1080" />
 	<div id="content">
 		<p class="hero">
 			<strong>Amelite</strong> is a 2D platformer that will challenge your creativity in this new take on a classic genre. Create your own path as the power of drawing platforms is in <em>your</em> hands!
