--- a/src/components/ParallaxHeader.astro
+++ b/src/components/ParallaxHeader.astro
@@ -2,13 +2,13 @@
 
 ---
 <header>
-	<img class="backdrop"                           src="/img/parallax/backdrop.webp" alt="" role="presentation" draggable="false"/>
-	<img class="scroll background3" data-speed="10" src="/img/parallax/bg3.webp"      alt="" role="presentation" draggable="false"/>
-	<img class="scroll background2" data-speed="5"  src="/img/parallax/bg2.webp"      alt="" role="presentation" draggable="false"/>
-	<img class="scroll background1" data-speed="1"  src="/img/parallax/bg1.webp"      alt="" role="presentation" draggable="false"/>
-	<img class="sun"                                src="/img/parallax/sun.webp"      alt="" role="presentation" draggable="false"/>
-	<h1><img class="fg"                             src="/img/parallax/fg.webp"       alt="Amelite" title="Amelite" draggable="false"/></h1>
-	<img class="crystal"                            src="/img/parallax/crystal.webp"  alt="" role="presentation" draggable="false"/>
+	<img class="backdrop"                           src="/img/parallax/backdrop.png" alt="" role="presentation" draggable="false"/>
+	<img class="scroll background3" data-speed="10" src="/img/parallax/bg3.png"      alt="" role="presentation" draggable="false"/>
+	<img class="scroll background2" data-speed="5"  src="/img/parallax/bg2.png"      alt="" role="presentation" draggable="false"/>
+	<img class="scroll background1" data-speed="1"  src="/img/parallax/bg1.png"      alt="" role="presentation" draggable="false"/>
+	<img class="sun"                                src="/img/parallax/sun.png"      alt="" role="presentation" draggable="false"/>
+	<h1><img class="fg"                             src="/img/parallax/fg.png"       alt="Amelite" title="Amelite" draggable="false"/></h1>
+	<img class="crystal"                            src="/img/parallax/crystal.png"  alt="" role="presentation" draggable="false"/>
 </header>
 
 <style>
