Remove scroll event

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,13 +49,13 @@ import { SEO } from 'astro-seo';
 	</style>
 
 	<script type="module">
-		const targets = document.querySelectorAll(".scroll");
-		window.addEventListener("scroll", () => {
-			const offset = window.scrollY / 10;
-			targets.forEach(target => {
-				target.style.transform = `translateY(${offset * target.dataset.speed}px)`;
-			})
-		});
+		// const targets = document.querySelectorAll(".scroll");
+		// window.addEventListener("scroll", () => {
+		// 	const offset = window.scrollY / 10;
+		// 	targets.forEach(target => {
+		// 		target.style.transform = `translateY(${offset * target.dataset.speed}px)`;
+		// 	})
+		// });
 	</script>
 
 	<script defer src="/js/lite-yt-embed.js"></script>
