Move awards to bottom, add contact link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@
 		<nav>
 			<ul>
 				<li><a href="https://store.steampowered.com/app/1848220/Amelite/">Steam</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="mailto:sealhorsestudios@gmail.com">Contact</a></li>
 			</ul>
 			<ul>
 				<li><a href="#">Discord</a></li>
