Change video to correct version

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -13,7 +13,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 			<strong>Amelite</strong> is a 2D platformer that will challenge your creativity in this new take on a classic genre. Create your own path as the power of drawing platforms is in <em>your</em> hands!
 		</p>
 		<h2>Trailer</h2>
-		<YouTube id="u7j7AUfCVrA" alt="Play video: Amelite trailer" />
+		<YouTube id="EKcnp1fLmyM" alt="Play video: Amelite trailer" />
 		<SteamButton />
 		<h2>About</h2>
 		<p>
