Uppercase CTA button text

--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -24,6 +24,7 @@ const { text, iconUrl, linkUrl } = Astro.props;
 		align-items: center;
 		width: fit-content;
 		justify-content: space-between;
+		text-transform: uppercase;
 	}
 
 	a:hover,
