Add Discord link

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -20,9 +20,9 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 			Find yourself at the bottom of an abandoned and mystical tower, overgrown by dangerous crystals. With the help of a peculiar creature, climb your way to the top through an ever challenging environment, and find your way home. Leap over gaping holes, block incoming projectiles, or wall-jump in tandem with your own walls. Amelite is a game packed with creative challenges, and every player is free to make their own solutions!
 		</p>
 		<ul class="socials">
-			<li><SocialMediaButton text="Discord" linkUrl="#" iconUrl="/img/discord-logo.svg" /></li>
-			<li><SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/amelite.sealhorsestudios/" iconUrl="/img/instagram-logo.png" /></li>
-			<li><SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/amelite.sealhorsestudios/" iconUrl="/img/facebook-logo.png" /></li>
+			<li><SocialMediaButton text="Discord" linkUrl="/discord" iconUrl="/img/discord-logo.svg" /></li>
+			<li><SocialMediaButton text="Instagram" linkUrl="/instagram" iconUrl="/img/instagram-logo.png" /></li>
+			<li><SocialMediaButton text="Facebook" linkUrl="/facebook" iconUrl="/img/facebook-logo.png" /></li>
 		</ul>
 		<h2>The team</h2>
 		<p>
