--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,17 +1,18 @@
 <footer>
 	<div class="container">
 		<small>
-			&copy; Sealhorse Studios 2022
+			&copy; Sealhorse Studios 2022<br />
+			Website by <a href="https://github.com/MarcusOtter">Marcus Otterström</a>
 		</small>
 		<nav>
 			<ul>
-				<li><a href="https://store.steampowered.com/app/1848220/Amelite/">Steam</a></li>
+				<li><a href="/steam">Steam</a></li>
 				<li><a href="mailto:sealhorsestudios@gmail.com">Contact</a></li>
 			</ul>
 			<ul>
-				<li><a href="#">Discord</a></li>
-				<li><a href="https://www.facebook.com/amelite.sealhorsestudios/">Facebook</a></li>
-				<li><a href="https://www.instagram.com/amelite.sealhorsestudios/">Instagram</a></li>
+				<li><a href="/discord">Discord</a></li>
+				<li><a href="/facebook">Facebook</a></li>
+				<li><a href="/instagram">Instagram</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -53,13 +54,14 @@
 		align-items: center;
 	}
 
-	nav a {
+	footer a {
 		display: inline-block;
 		padding: 0.25em;
+		margin-left: -0.25em;
 	}
 
-	nav a:hover,
-	nav a:focus {
+	footer a:hover,
+	footer a:focus {
 		text-decoration: none;
 	}
 
