Fix broken steam link oops

--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -1,4 +1,4 @@
-<a href="/Steam">
+<a href="/steam">
 	<span>Wishlist on Steam</span>
 	<img src="/img/steam-logo.png" alt="" role="presentation" width="34" height="34" />
 </a>
