Do not use redirect links

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,13 +6,13 @@
 		</small>
 		<nav>
 			<ul>
-				<li><a href="/steam">Steam</a></li>
+				<li><a href="https://store.steampowered.com/app/1848220/Amelite/">Steam</a></li>
 				<li><a href="mailto:sealhorsestudios@gmail.com">Contact</a></li>
 			</ul>
 			<ul>
-				<li><a href="/discord">Discord</a></li>
-				<li><a href="/facebook">Facebook</a></li>
-				<li><a href="/instagram">Instagram</a></li>
+				<li><a href="https://discord.gg/q5zdWWdJvn">Discord</a></li>
+				<li><a href="https://www.facebook.com/amelite.sealhorsestudios/">Facebook</a></li>
+				<li><a href="https://www.instagram.com/amelite.sealhorsestudios/">Instagram</a></li>
 			</ul>
 		</nav>
 	</div>
