--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,6 +70,7 @@ import { SEO } from 'astro-seo';
 
 	<script defer src="/js/lite-yt-embed.js"></script>
 	<script defer data-domain="amelitegame.com" src="/js/script.js"></script>
+	<script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </head>
 <body>
 	<ParallaxHeader />
