--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -3,6 +3,7 @@ import Awards from '../components/Awards.astro';
 import YouTube from '../components/YouTube.astro';
 import Screenshot from '../components/Screenshot.astro';
 import SteamButton from '../components/SteamButton.astro';
+import Countdown from '../components/Countdown.astro';
 import SocialMediaButton from '../components/SocialMediaButton.astro';
 
 ---
@@ -12,6 +13,7 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		<p class="hero">
 			<strong>Amelite</strong> is a 2D platformer that will challenge your creativity in this new take on a classic genre. Create your own path as the power of drawing platforms is in <em>your</em> hands!
 		</p>
+		<Countdown />
 		<h2>Trailer</h2>
 		<YouTube id="EKcnp1fLmyM" alt="Play video: Amelite trailer" />
 		<SteamButton />
