Slight responsiveness improvement

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -10,6 +10,12 @@
 	span {
 		color: #f7604b;
 	}
+
+	@media screen and (max-width: 450px) {
+		span {
+			display: block;
+		}
+	}
 </style>
 
 <script>
