Scale font size with em

--- a/src/components/Countdown.astro
+++ b/src/components/Countdown.astro
@@ -3,7 +3,7 @@
 <style>
 	p {
 		text-align: center;
-		font-size: 2rem;
+		font-size: 1.5em;
 		color: #f8c059;
 	}
 
@@ -11,7 +11,7 @@
 		color: #f7604b;
 	}
 
-	@media screen and (max-width: 450px) {
+	@media screen and (max-width: 400px) {
 		span {
 			display: block;
 		}
