--- a/src/components/SteamButton.astro
+++ b/src/components/SteamButton.astro
@@ -1,11 +1,11 @@
 <a href="https://store.steampowered.com/app/1848220/Amelite/">
-	<span>Wishlist on Steam</span>
 	<img src="/img/steam-logo.png" alt="" role="presentation" width="34" height="34" />
+	<span>Buy on Steam</span>
 </a>
 
 <style>
 	a {
-		padding: 0.75em 2em;
+		padding: 0.75em 1.5em 0.75em 1.2em;
 		background: linear-gradient(to right, #6fa720 5%, #588a1b 95%);
 		color: #fff;
 		text-decoration: none;
@@ -27,8 +27,8 @@
 	}
 
 	img {
-		height: 1.5em;
-		margin-left: 0.75em;
+		height: 1.25em;
+		margin-right: 0.75em;
 		width: auto;
 	}
 
