--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,18 +14,18 @@ import { SEO } from 'astro-seo';
 	<meta name="keywords" content="Amelite,Game,2D,Platformer,Draw,Platform,Steam,Indie"/>
 
 	<SEO 
-		title="Amelite - Out soon on Steam!"
+		title="Amelite - Out now on Steam!"
 		description="Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home."
 		canonical="https://amelitegame.com"
 		openGraph={{
 			basic: {
-				title: "Amelite - Out soon on Steam!",
+				title: "Amelite - Out now on Steam!",
 				type: "website",
 				image: "/img/trailer-img.png",
 				url: "https://amelitegame.com"
 			},
 			optional: {
-				video: "https://www.youtube.com/v/EKcnp1fLmyM",
+				video: "https://www.youtube.com/v/ixbsfMQe4XE",
 				description: "Challenge your creativity and create your own path in this new take on the classic 2D platformer genre. Climb a mystical tower and find your way back home."
 			},
 			image: {
