--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -10,8 +10,8 @@ const { text, iconUrl, linkUrl } = Astro.props;
 ---
 
 <a href={linkUrl}>
-	<span>{text}</span>
 	<img src={iconUrl} alt="" role="presentation" width="24" height="24" />
+	<span>{text}</span>
 </a>
 <style>
 	a {
@@ -33,8 +33,8 @@ const { text, iconUrl, linkUrl } = Astro.props;
 	}
 
 	img {
-		height: 1.15em;
-		margin-left: 0.75em;
+		height: 1em;
+		margin-right: 0.75em;
 		width: auto;
 	}
 
