Fix broken links

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -21,8 +21,8 @@ import SocialMediaButton from '../components/SocialMediaButton.astro';
 		</p>
 		<ul class="socials">
 			<li><SocialMediaButton text="Discord" linkUrl="https://discord.gg/q5zdWWdJvn" iconUrl="/img/discord-logo.svg" /></li>
-			<li><SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/amelite.sealhorsestudios/" iconUrl="/img/instagram-logo.png" /></li>
-			<li><SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/amelite.sealhorsestudios/" iconUrl="/img/facebook-logo.png" /></li>
+			<li><SocialMediaButton text="Instagram" linkUrl="https://www.instagram.com/sealhorse.studios/" iconUrl="/img/instagram-logo.png" /></li>
+			<li><SocialMediaButton text="Facebook" linkUrl="https://www.facebook.com/sealhorsestudios/" iconUrl="/img/facebook-logo.png" /></li>
 		</ul>
 		<h2>The team</h2>
 		<p>
